DD/MM/YY @ hh:mm - Change Description (INITIAL)

02/03/16 @ 16:01 - Uploaded CodeIgniter Starter (CS)
02/03/16 @ 16:03 - Created schedule.dtd file (CS)

03/03/16 @ 15:31 - Modified and updated schedule.dtd file (CS)
03/03/16 @ 15:41 - Created winter2016-course xml (CS)
03/06/16 @ 15:30 - Created and completed winter2016-day.xml (JL)
03/06/16 @ 15:45 - Updated winter2016-course.xml (JL)
03/06/16 @ 16:05 - Created winter2016-period.xml (JL)

03/07/16 @ 14:10 - Modified README.md to include names (RD)
03/07/16 @ 14:24 - Fixed xml validation for period (RD)

03/09/16 @ 15:50 - Reuploaded CodeIgniter Starter with .htaccess (CS)
03/09/16 @ 16:00 - Created Timetable.php model (CS)

03/10/16 @ 14:40 - Changed multiplicity in schedule.dtd  (RD)
03/10/16 @ 14:40 - Modified period.xml (pbooking) so it makes more sense  (RD)

03/22/16 @ 14:19 - Updated Timetable.php model (CS)
03/22/16 @ 14:39 - Modified autoload.php file to autoload Timetable.php model (CS)
03/22/16 @ 14:53 - Added css files/folder to project (CS)
03/22/16 @ 15:09 - Added template view (CS)
03/22/16 @ 15:09 - Added welcome view (CS)
03/22/16 @ 15:11 - Added MY_Controller file (CS)
03/22/16 @ 15:22 - Modified autoload.php file for parsing (CS)