@@ -1,0 +1,344 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+
+<timetable xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="timetable.xsd">
+    <course>
+        <aCourse code="ACIT4620" name="Enterprise Systems Administration">
+            <cBooking type="Lecture">
+                <daySlot>Monday</daySlot>
+                <timeStart>1230</timeStart>
+                <timeEnd>1320</timeEnd>
+                <room>SW1-2009</room>
+                <instructor>Bethany Edmunds</instructor>
+            </cBooking>
+            <cBooking type="Lab">
+                <daySlot>Tuesday</daySlot>
+                <timeStart>0830</timeStart>
+                <timeEnd>1020</timeEnd>
+                <room>SE12-306</room>
+                <instructor>Bethany Edmunds</instructor>
+            </cBooking>
+            <cBooking type="Lecture">
+                <daySlot>Tuesday</daySlot>
+                <timeStart>1530</timeStart>
+                <timeEnd>1620</timeEnd>
+                <room>SW3-3615</room>
+                <instructor>Bethany Edmunds</instructor>
+            </cBooking>
+        </aCourse>
+        <aCourse code="ACIT4650" name="Collaboration and Content Management Systems Administration">
+            <cBooking type="Lab">
+                <daySlot>Monday</daySlot>
+                <timeStart>1030</timeStart>
+                <timeEnd>1220</timeEnd>
+                <room>SE12-306</room>
+                <instructor>Medhat Elmasry</instructor> 
+            </cBooking>
+            <cBooking type="Lecture">
+                <daySlot>Monday</daySlot>
+                <timeStart>1630</timeStart>
+                <timeEnd>1720</timeEnd>
+                <room>SE6-205</room>
+                <instructor>Medhat Elmasry</instructor>
+            </cBooking>
+            <cBooking type="Lecture">
+                <daySlot>Tuesday</daySlot>
+                <timeStart>1230</timeStart>
+                <timeEnd>1320</timeEnd>
+                <room>SW9-206</room>
+                <instructor>Medhat Elmasry</instructor>
+            </cBooking>
+        </aCourse>
+        <aCourse code="ACIT4660" name="Introduction to Business Intelligence">
+            <cBooking type="Lecture">
+                <daySlot>Friday</daySlot>
+                <timeStart>0830</timeStart>
+                <timeEnd>1020</timeEnd>
+                <room>SW9-206</room>
+                <instructor>Stephen Fabiszewski</instructor>
+            </cBooking>
+            <cBooking type="Lab">
+                <daySlot>Friday</daySlot>
+                <timeStart>1030</timeStart>
+                <timeEnd>1220</timeEnd>
+                <room>SE12-306</room>
+                <instructor>Stephen Fabiszewski</instructor>
+            </cBooking>
+        </aCourse>
+        <aCourse code="ACIT4770" name="Legal and Ethical Issues in IT">
+            <cBooking type="Tutorial">
+                <daySlot>Friday</daySlot>
+                <timeStart>1330</timeStart>
+                <timeEnd>1520</timeEnd>
+                <room>SE12-306</room>
+                <instructor>Trevor Lord</instructor>
+            </cBooking>
+        </aCourse>
+        <aCourse code="ACIT4850" name="Integrative Programming and Technologies">
+            <cBooking type="Lecture">
+                <daySlot>Wednesday</daySlot>
+                <timeStart>1230</timeStart>
+                <timeEnd>1420</timeEnd>
+                <room>SW3-1750</room>
+                <instructor>James Parry</instructor>
+            </cBooking>
+            <cBooking type="Lab">
+                <daySlot>Thursday</daySlot>
+                <timeStart>1330</timeStart>
+                <timeEnd>1520</timeEnd>
+                <room>SE12-308</room>
+                <instructor>James Parry</instructor>
+            </cBooking>
+        </aCourse>
+        <aCourse code="ACIT4910" name="Database Backup, Recovery and Tuning">
+            <cBooking type="Lecture">
+                <daySlot>Monday</daySlot>
+                <timeStart>1530</timeStart>
+                <timeEnd>1620</timeEnd>
+                <room>SW9-206</room>
+                <instructor>Richard Chau</instructor>
+            </cBooking>
+            <cBooking type="Lecture">
+                <daySlot>Thursday</daySlot>
+                <timeStart>0930</timeStart>
+                <timeEnd>1020</timeEnd>
+                <room>SW5-1840</room>
+                <instructor>Richard Chau</instructor>
+            </cBooking>
+            <cBooking type="Lab">
+                <daySlot>Thursday</daySlot>
+                <timeStart>1030</timeStart>
+                <timeEnd>1220</timeEnd>
+                <room>SE12-306</room>
+                <instructor>Richard Chau</instructor>
+            </cBooking>
+        </aCourse>
+    </course>
+
+    
+<day>
+    <aDay weekday="Monday">
+        <dBooking>
+            <timeStart>1030</timeStart>
+            <timeEnd>1220</timeEnd>
+            <courseName>Content Management Systems Admin Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>Medhat Elmasry</instructor>
+        </dBooking>
+        
+        <dBooking>
+            <timeStart>1530</timeStart>
+            <timeEnd>1620</timeEnd>
+            <courseName>Database Recovery and Tuning Lecture</courseName>
+            <room>SW9-206</room>
+            <instructor>Richard Chau</instructor>
+        </dBooking>
+        
+        <dBooking>
+            <timeStart>1630</timeStart>
+            <timeEnd>1720</timeEnd>
+            <courseName>Content Mananagement Systems Admin Lecture</courseName>
+            <room>SE6-205</room>
+            <instructor>Medhat Elmasry</instructor>
+        </dBooking>
+    </aDay>
+    
+    <aDay weekday="Tuesday">
+        <dBooking>
+            <timeStart>830</timeStart>
+            <timeEnd>1020</timeEnd>
+            <courseName>Enterprise Systems Admin Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>Bethany Edmunds</instructor>
+        </dBooking>
+        
+        <dBooking>
+            <timeStart>1230</timeStart>
+            <timeEnd>1320</timeEnd>
+            <courseName>Content Management Systems Admin Lecture</courseName>
+            <room>SW9-206</room>
+            <instructor>Medhat Elmasry</instructor>
+        </dBooking>
+        
+        <dBooking>
+            <timeStart>1530</timeStart>
+            <timeEnd>1720</timeEnd>
+            <courseName>Enterprise Systems Admin Lecture</courseName>
+            <room>SW3-3615</room>
+            <instructor>Bethany Edmunds</instructor>
+        </dBooking>
+    </aDay>
+    
+    <aDay weekday="Wednesday">
+        <dBooking>
+            <timeStart>1230</timeStart>
+            <timeEnd>1420</timeEnd>
+            <courseName>Integrative Programming and Technologies Lecture</courseName>
+            <room>SW3-1750</room>
+            <instructor>James Parry</instructor>
+        </dBooking>
+    </aDay>
+    
+    <aDay weekday="Thursday">
+        <dBooking>
+            <timeStart>930</timeStart>
+            <timeEnd>1020</timeEnd>
+            <courseName>Database Backup, Recovery and Tuning Lecture</courseName>
+            <room>SW5-1840</room>
+            <instructor>Richard Chau</instructor>
+        </dBooking>
+        
+        <dBooking>
+            <timeStart>1030</timeStart>
+            <timeEnd>1220</timeEnd>
+            <courseName>Database Backup, Recovery and Tuning Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>Richard Chau</instructor>
+        </dBooking>
+        
+        <dBooking>
+            <timeStart>1330</timeStart>
+            <timeEnd>1520</timeEnd>
+            <courseName>Integrative Programming and Technologies Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>James Parry</instructor>
+        </dBooking>
+    </aDay>
+    
+    <aDay weekday="Friday">
+        <dBooking>
+            <timeStart>830</timeStart>
+            <timeEnd>1020</timeEnd>
+            <courseName>Intro to Business Intelligence Lecture</courseName>
+            <room>SW9-206</room>
+            <instructor>Steve Fabiszewski</instructor>
+        </dBooking>
+        
+        <dBooking>
+            <timeStart>1030</timeStart>
+            <timeEnd>1220</timeEnd>
+            <courseName>Intro to Business Intelligence Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>Steve Fabiszewski</instructor>
+        </dBooking>
+        
+        <dBooking>
+            <timeStart>1330</timeStart>
+            <timeEnd>1520</timeEnd>
+            <courseName>Legal and Ethical Issues in IT</courseName>
+            <room>SE12-306</room>
+            <instructor>Trevor Lord</instructor>
+        </dBooking>
+    </aDay>
+</day>
+
+<period>
+    <timeslot duration="2" start="830" end="1020">
+        <pBooking>
+            <daySlot>Tuesday</daySlot>
+            <courseName>Enterprise Systems Admin Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>Bethany Edmunds</instructor>
+        </pBooking>
+        <pBooking> 
+            <daySlot>Friday</daySlot>
+            <courseName>Intro to Business Intelligence Lecture</courseName>
+            <room>SW9-206</room>
+            <instructor>Steve Fabiszewski</instructor>
+        </pBooking>
+    </timeslot>
+    
+    <timeslot duration="1" start="930" end="1020">
+        <pBooking>
+            <daySlot>Thursday</daySlot>
+            <courseName>Database Backup, Recover, Tuning Lecture</courseName>
+            <room>SW5-1750</room>
+            <instructor>Richard Chau</instructor>
+        </pBooking>
+    </timeslot> 
+    
+    <timeslot duration="2" start="1030" end="1220"> 
+        <pBooking> 
+            <daySlot>Monday</daySlot>
+            <courseName>Content Management Systems Admin Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>Medhat Elmasry</instructor>
+        </pBooking>
+        <pBooking>
+            <daySlot>Thursday</daySlot>
+            <courseName>Database Backup, Recover, Tuning Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>Richard Chau</instructor>
+        </pBooking>
+        <pBooking>
+            <daySlot>Friday</daySlot>
+            <courseName>Intro to Business Intelligence Lab</courseName>
+            <room>SE12-306</room>
+            <instructor>Steve Fabiszewski</instructor>
+        </pBooking>
+    </timeslot>
+    
+    <timeslot duration="1" start="1230" end="1320"> 
+        <pBooking>
+            <daySlot>Monday</daySlot>
+            <courseName>Enterprise Systems Admin Lecture</courseName>
+            <room>SW1-2009</room>
+            <instructor>Bethany Edmunds</instructor>
+        </pBooking>
+        <pBooking>
+            <daySlot>Tuesday</daySlot>
+            <courseName>Content Management Systems Admin Lecture</courseName>
+            <room>SW9-206</room>
+            <instructor>Medhat Elmasry</instructor>
+        </pBooking>
+    </timeslot>
+    
+    <timeslot duration="2" start="1230" end="1420"> 
+        <pBooking>
+            <daySlot>Wednesday</daySlot>
+            <courseName>Integrative Programming and Technologies Lecture</courseName>
+            <room>SW3-1750</room>
+            <instructor>James Parry</instructor>
+        </pBooking>
+    </timeslot>
+    
+    <timeslot duration="2" start="1330" end="1520"> 
+        <pBooking> 
+            <daySlot>Thursday</daySlot>
+            <courseName>Integrative Programming and Technologies Lab</courseName>
+            <room>SE12-308</room>
+            <instructor>James Parry</instructor>
+        </pBooking>
+        <pBooking>
+            <daySlot>Friday</daySlot>
+            <courseName>Legal and Ethical Issues in IT</courseName>
+            <room>SE12-306</room>
+            <instructor>Trevor Lord</instructor>
+        </pBooking>
+    </timeslot>
+    
+    <timeslot duration="1" start="1530" end="1620"> 
+        <pBooking>
+            <daySlot>Monday</daySlot>
+            <courseName>Database Backup, Recovery, Tuning Lecture</courseName>
+            <room>SW9-206</room>
+            <instructor>Richard Chau</instructor>
+        </pBooking>
+        <pBooking>
+            <daySlot>Tuesday</daySlot>
+            <courseName>Enterprise Systems Admin Lecture</courseName>
+            <room>SW3-3615</room>
+            <instructor>Bethany Edmunds</instructor>
+        </pBooking>
+    </timeslot>
+    <timeslot duration="1" start="1630" end="1720"> 
+        <pBooking>
+            <daySlot>Monday</daySlot>
+            <courseName>Content Management Systems Admin Lecture</courseName>
+            <room>SE6-205</room>
+            <instructor>Medhat Elmasry</instructor>
+        </pBooking>
+    </timeslot>
+</period>
+
+
+</timetable>
